Python logo, responsiveness and spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,6 @@ Canvas{
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	margin-bottom: 100px;
-	
 }
 
 .intro{
@@ -956,6 +955,62 @@ h3{
 	font-size: 13.56px;
 	font-weight: 500;
 
+}
+
+@media only screen and 
+(device-width: 430px) and 
+(device-height: 932px) and 
+(-webkit-min-device-pixel-ratio: 3){
+
+	header{
+		width: 100%;
+		height: 100px;
+		background-color: #FFFFFF;
+		border: none;
+		display: flex;
+	}
+
+	Canvas{
+		width: 100vw;
+		height: 640px;
+	}
+
+	.introduction{
+		display: grid;
+		grid-template-columns: 1fr;
+		margin-bottom: 100px;
+	}
+
+	.workinfo{
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+
+	.skills{
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+
+	.skillsHolder{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		margin-left: 30px;
+		margin-top: 25px;
+		gap: 2rem;
+	}
+
+	.infoCard{
+		height: fit-content;
+	}
+
+	.projects{
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+
+	.titleDiv{
+		margin-bottom: -60px;
+	}
 }
 
 
